<resources>
    <string name="app_name">StudyFirst</string>
    <string name="exchange">업비트(Upbit)</string>
    <string name="marketKRW">KRW</string>
    <string name="marketBTC">BTC</string>
    <string name="marketETH">ETH</string>
    <string name="marketUSDT">USDT</string>
    <string name="coinName">코인명</string>
    <string name="currentPrice">현재가</string>
    <string name="comparePrice">전일대비</string>
    <string name="changePrice">거래대금</string>
    <string name="firstMarketName">KRW</string>
</resources>
