<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="vm"
                type="sample.nackun.com.studyfirst.ui.ticker.TickerViewModel"/>
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FEFBF2">
        <TextView
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exchange"
                android:textSize="24sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:id="@+id/tv_market_title"
                android:textColor="#000000"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/tv_market_title"
                android:id="@+id/li_market_like"
                android:layout_marginTop="12dp">
            <TextView
                    android:id="@+id/tv_market_krw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/marketKRW"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:onClick="@{(v)->vm.selectedMarket(@string/marketKRW)}"
                    app:selectedMarketColor="@{vm.selectedMarket}"/>
            <TextView
                    android:id="@+id/tv_market_btc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/marketBTC"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:onClick="@{(v)->vm.selectedMarket(@string/marketBTC)}"
                    app:selectedMarketColor="@{vm.selectedMarket}"/>
            <TextView
                    android:id="@+id/tv_market_eth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/marketETH"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:onClick="@{(v)->vm.selectedMarket(@string/marketETH)}"
                    app:selectedMarketColor="@{vm.selectedMarket}"/>
            <TextView
                    android:id="@+id/tv_market_usdt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/marketUSDT"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:onClick="@{(v)->vm.selectedMarket(@string/marketUSDT)}"
                    app:selectedMarketColor="@{vm.selectedMarket}"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/li_ticker_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_below="@id/li_market_like">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/coinName"
                    android:textSize="18sp"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/currentPrice"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:gravity="end"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/comparePrice"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:gravity="end"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/changePrice"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:gravity="end"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
                android:layout_below="@id/li_ticker_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tickerRecyclerView"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:setItems="@{vm.tickers}"/>
    </RelativeLayout>
</layout>